--- a/AcademicInfo.Frontend/index.html
+++ b/AcademicInfo.Frontend/index.html
@@ -17,11 +17,18 @@
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
+    <script src="Scripts/Model/activity.js"></script>
     <script src="Scripts/Model/admin.js"></script>
+    <script src="Scripts/Model/course.js"></script>
+    <script src="Scripts/Model/degree.js"></script>
+    <script src="Scripts/Model/department.js"></script>
+    <script src="Scripts/Model/evaluation.js"></script>
+    <script src="Scripts/Model/faculty.js"></script>
+    <script src="Scripts/Model/group.js"></script>
+    <script src="Scripts/Model/optionalCourse.js"></script>
+    <script src="Scripts/Model/person.js"></script>
     <script src="Scripts/Model/student.js"></script>
     <script src="Scripts/Model/teacher.js"></script>
-    <script src="Scripts/Model/optionalCourse.js"></script>
-    <script src="Scripts/Model/course.js"></script>
     <script src="Scripts/Model/user.js"></script>
 
     <script src="Scripts/Home/StudentHome/module.js"></script>
