--- a/AcademicInfo.Frontend/Scripts/Login/login.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Login/login.tmpl.html
@@ -1,5 +1,3 @@
-{{userToLogin}}
-
 <div id="loginModal" class="modal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -17,7 +15,7 @@
                     <div class="checkbox">
                         <label><input type="checkbox" value="Remember me" ng-model="remember" ng-click="rememberMe()">Remember me</label>
                     </div>
-                    <div class="form-group" ng-click="redirectLogin()" data-dismiss="modal">
+                    <div class="form-group" ng-click="validateLogin()" data-dismiss="modal">
                         <button class="btn btn-primary">Sign In</button>
                     </div>
                 </form>
