Minor fixes and some improvments to teachers home

--- a/AcademicInfo.Frontend/Scripts/Home/DepartmentChiefHome/departmentChief-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/DepartmentChiefHome/departmentChief-home.tmpl.html
@@ -6,7 +6,12 @@
                 <th class="col-md-8">
                     <h1 >Welcome, {{userToLogin.username}}!</h1>
                 </th>
-                <th class="col-md-8"></th>
+                <th class="col-md-7"></th>
+                <th class="col-md-1">
+                    <div>
+                        <button type="button" class="btn btn-info" ng-click="goToTeachers()">Teachers</button>
+                    </div>
+                </th>
                 <th class="col-md-1">
                     <div>
                         <button type="button" class="btn btn-info" ng-click="goToLogin()">Sign Out</button>
