change name for add teachear

--- a/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
@@ -318,7 +318,7 @@
                         <tr>
                             <td class="col-md-2">Password</td>
                             <td class="col-md-2">
-                                <input type="password" class="form-control" name="Password" title="Password" ng-model="teacherToAdd.person.user.assword">
+                                <input type="password" class="form-control" name="Password" title="Password" ng-model="teacherToAdd.person.user.password">
                             </td>
                         </tr>
                         <tr></tr>
@@ -376,7 +376,7 @@
                             <td class="col-md-2">Is Chief:</td>
                             <td class="col-md-2">
                                 <div class="btn btn-info disabled">
-                                <input type="checkbox" class="form-control" name="Is Chief" title="Is Chief" data-toggle="button" ng-model="teacherToAdd.isChief">
+                                <input type="checkbox" class="form-control" name="Is Chief" title="Is Chief" data-toggle="button" ng-model="teacherToAdd.chief">
                                 </div>
                             </td>
                         </tr>
