Updated student optional courses, evaluation, scholarship. Updated database with missing FKs and fields.

--- a/AcademicInfo.Frontend/Scripts/Home/TeacherHome/teacher-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/TeacherHome/teacher-home.tmpl.html
@@ -32,7 +32,7 @@
                                         <tr>
                                             <td class="col-md-2">Abstract Name</td>
                                             <td class="col-md-2">
-                                                <input type="text" class="form-control" name="Abstract Name" title="Abstract Name" ng-model="courseToAdd.abstractName">
+                                                <input type="text" class="form-control" name="Abstract Name" title="Abstract Name" ng-model="courseToAdd.id">
                                             </td>
                                         </tr>
                                         <tr>
