--- a/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
@@ -154,7 +154,7 @@
                     <table class="table-hover">
                         <tr ng-repeat="t in existingTeachers">
                             <td class="col-sm-1">
-                                <span>{{t}} ---- {{t.personVO.firstName}} </span>
+                                <span>{{t.personVO.firstName}} </span>
                                 <span>{{t.personVO.lastName}} </span>
                             </td>
                             <td class="col-sm-1">
