get student grades

--- a/AcademicInfo.Frontend/Scripts/Home/StudentHome/student-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/StudentHome/student-home.tmpl.html
@@ -3,7 +3,7 @@
         <table>
             <tr class="page-header">
                 <th class="col-md-8">
-                    <h1 >Welcome, {{userToLogin.username}}!</h1>
+                    <h1>Welcome, {{userToLogin.username}}!</h1>
                 </th>
                 <th class="col-md-8"></th>
                 <th class="col-md-1">
@@ -30,9 +30,25 @@
                             </div>
                             <div class="modal-body">
 
+                                <table class="table-hover">
+                                    <tr ng-repeat="grade in studentGrades">
+                                        <td class="col-md-3" data-toggle="modal" data-target="#editChiefModal{{evaluationVO.courseVO.name}}">
+                                            <span>{{grades.grade}} </span>
+                                        </td>
+                                        <td class="col-md-2 pull-right">
+                                            <button class="btn btn-success disabled">
+                                                <span class="glyphicon glyphicon-check"></span>
+                                            </button>
+                                        </td>
+
+                                    </tr>
+                                </table>
+
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-success" data-dismiss="modal" ng-click="watchGrades()">Next</button>
+                                <button type="button" class="btn btn-success" data-dismiss="modal"
+                                        ng-click="watchGrades()">Next
+                                </button>
                                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                             </div>
                         </div>
@@ -68,8 +84,10 @@
                                             <span>{{oc.course.name}} </span>
                                         </td>
                                         <td class="col-md-2 pull-right">
-                                            <button id="addOptionalCourse{{oc.course.name}}Button" class="btn btn-info" ng-click="addCourse(oc)">
-                                                <span id="addOptionalCourse{{oc.course.name}}Span" class="glyphicon glyphicon-plus"></span>
+                                            <button id="addOptionalCourse{{oc.course.name}}Button" class="btn btn-info"
+                                                    ng-click="addCourse(oc)">
+                                                <span id="addOptionalCourse{{oc.course.name}}Span"
+                                                      class="glyphicon glyphicon-plus"></span>
                                             </button>
                                         </td>
 
@@ -77,14 +95,17 @@
                                 </table>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-success" data-dismiss="modal" ng-click="saveContract()">Save</button>
+                                <button type="button" class="btn btn-success" data-dismiss="modal"
+                                        ng-click="saveContract()">Save
+                                </button>
                                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <button class="btn btn-info" data-toggle="modal" data-target="#studyContractModal">Study Contract</button>
+                <button class="btn btn-info" data-toggle="modal" data-target="#studyContractModal">Study Contract
+                </button>
             </td>
 
 
