Fixed frontend error logging functions. Fixed syntax errors in admin home. Changed On update/delete constraints to cascade, in studentscholarship.

--- a/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
+++ b/AcademicInfo.Frontend/Scripts/Home/AdminHome/admin-home.tmpl.html
@@ -167,7 +167,7 @@
                                                     <tr>
                                                         <td class="col-md-2">Username</td>
                                                         <td class="col-md-2">
-                                                            <input type="text" class="form-control" name="Username" title="Username" ng-model="t.person.user..username">
+                                                            <input type="text" class="form-control" name="Username" title="Username" ng-model="t.person.user.username">
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -200,7 +200,7 @@
                                                     <tr>
                                                         <td class="col-md-2">SSN</td>
                                                         <td class="col-md-2">
-                                                            <input type="text" class="form-control" name="Ssn" title="Ssn" ng-model="t.person..ssn">
+                                                            <input type="text" class="form-control" name="Ssn" title="Ssn" ng-model="t.person.ssn">
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -269,7 +269,7 @@
                                                     <tr>
                                                         <td class="col-md-2">Username</td>
                                                         <td class="col-md-2">
-                                                            <input type="text" class="form-control" name="Username" title="Username" ng-model="s.person.user..username">
+                                                            <input type="text" class="form-control" name="Username" title="Username" ng-model="s.person.user.username">
                                                         </td>
                                                     </tr>
                                                     <tr>
